--- a/l10n/l10n.csv
+++ b/l10n/l10n.csv
@@ -1,51 +1,58 @@
-key,de-DE,en-US,da-DK,fi-FI,sv-SE,it-IT,es-ES,ru-RU,pl-PL,cs-CZ
-zooniverse.importer.modal.header.label|text,Zooniverse Import,Zooniverse Import,,Zooniverse tuonti,,,,,,
-zooniverse.importer.modal.confirm_cancel,Wollen Sie den Import abbrechen?,Do you want to cancel the import?,,,,,,,,
-zooniverse.importer.modal_content.header.label,Wählen Sie eine CSV Datei mit exportierten Zooniverse Daten,Select a CSV file with Zooniverse export data ,,,,,,,,
-zooniverse.importer.modal_content.upload_csv_button.label,CSV Datei öffnen,Open CSV file,,,,,,,,
-zooniverse.importer.modal_content.parse_csv_button.label,CSV Daten im Server parsen ,Parse CSV data in server,,,,,,,,
+key,de-DE,R,en-US,R,da-DK,R,fi-FI,R,sv-SE,R,fr-FR,R,it-IT,R,es-ES,R,cs-CZ,R,pl-PL,R,ru-RU,R
+zooniverse.importer.modal.header.label|text,Zooniverse Import,FALSE,Zooniverse Import,FALSE,,FALSE,Zooniverse tuonti,FALSE,,FALSE,Zooniverse Import,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.modal.confirm_cancel,Wollen Sie den Import abbrechen?,FALSE,Do you want to cancel the import?,FALSE,,FALSE,,FALSE,,FALSE,Voulez-vous annuler l'importation ?,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.modal_content.header.label,Wählen Sie eine CSV Datei mit exportierten Zooniverse Daten,FALSE,Select a CSV file with Zooniverse export data ,FALSE,,FALSE,,FALSE,,FALSE,Sélectionnez un fichier CSV avec les données d'exportation de Zooniverse,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.modal_content.upload_csv_button.label,CSV Datei öffnen,FALSE,Open CSV file,FALSE,,FALSE,,FALSE,,FALSE,Ouvrir le fichier CSV,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.modal_content.parse_csv_button.label,CSV Daten im Server parsen ,FALSE,Parse CSV data in server,FALSE,,FALSE,,FALSE,,FALSE,Analyser les données CSV dans le serveur,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
 error.user.zooniverse_import,"Beim Parsen der Daten ist ein Fehler aufgetreten:
 
-%(description)s","Parsing of the data caused an error:
+%(description)s",FALSE,"Parsing of the data caused an error:
 
-%(description)s",,,,,,,,
-zooniverse.importer.import_button.label,Importieren,Import,,,,,,,,
-server.config.group.system.zooniverse_import.introduction,-,-,-,-,-,-,-,-,-,-
-server.config.group.system.zooniverse_import.title,Zooniverse Import,Zooniverse Import,,Zooniverse tuonti,,,,,,
-server.config.name.system.zooniverse_import,API-Nutzer,API User,,API-käyttäjä,,,,,,
-server.config.name.system.zooniverse_import|hint,"Der Nutzer benötigt ausreichende Berechtigungen, die relevanten Objekttypen zu lesen und zu schreiben",The User needs sufficient permissions to read and write the relevant object types,,Käyttäjä tarvitsee riittävät oikeudet lukea ja kirjoittaa asiaankuuluvia objektityyppejä,,,,,,
-server.config.parameter.system.zooniverse_import.api_password.label,Passwort,Password,,Salasana,,,,,,
-server.config.parameter.system.zooniverse_import.api_session_token.label,Token,Token,,Tunniste,,,,,,
-server.config.parameter.system.zooniverse_import.api_session_token.label|hint,"optional, wird ignoriert wenn Login und Passwort gesetzt sind","optional, is ignored if Login and Password are set",,"valinnainen, ohitetaan, jos käyttäjätunnus ja salasana on asetettu",,,,,,
-server.config.parameter.system.zooniverse_import.api_user.label,Login,Login,,Käyttäjätunnus,,,,,,
-zooniverse_import.app.label,Zooniverse Import,Zooniverse Import,,Zooniverse tuonti,,,,,,
-server.config.name.system.zooniverse_import_mappings,Zuordnungen zwischen Objekten und Daten aus Zooniverse,Mapping between records and Zooniverse data,,,,,,,,
-server.config.parameter.system.zooniverse_import_mappings.mappings.label,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import_mappings.enabled.checkbox,Zuordnung aktiviert,Mapping enabled,,,,,,,,
-server.config.parameter.system.zooniverse_import_mappings.mappings.enabled.label,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import.mappings.update_objecttype.label,Objekttyp,Objecttype,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_objecttype.label|hint,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import.mappings.match_column.label,Feld für Abgleich,Field for match,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.match_column.label|hint,"Feld mit eindeutigem Wert, der für den Abgleich mit der Zooniverse Signatur (CSV-Spalte `subject_data` - `Filename`) genutzt wird",Feld with unique value which will be used for matching with the Zooniverse signature (CSV column `subject_data` - `Filename`),,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t0.label,Zielfeld T0,Target field T0,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t0.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T0`,Target field for the value of CSV column `annotations` - `task: T0`,,,,,,,,
-server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t0.label,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import_mappings.split_update_column_t0.checkbox,"Werte aufsplitten (an `,` und `;`)","Split values (at `,` and `;`)",,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t2.label,Zielfeld T2,Target field T2,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t2.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T2`,Target field for the value of CSV column `annotations` - `task: T2`,,,,,,,,
-server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t2.label,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import_mappings.split_update_column_t2.checkbox,"Werte aufsplitten (an `,` und `;`)","Split values (at `,` and `;`)",,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t3.label,Zielfeld T3,Target field T3,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t3.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T3`,Target field for the value of CSV column `annotations` - `task: T3`,,,,,,,,
-server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t3.label,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import_mappings.split_update_column_t3.checkbox,"Werte aufsplitten (an `,` und `;`)","Split values (at `,` and `;`)",,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t4.label,Zielfeld T4,Target field T4,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_t4.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T4`,Target field for the value of CSV column `annotations` - `task: T4`,,,,,,,,
-server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t4.label,-,-,-,-,-,-,-,-,-,-
-server.config.parameter.system.zooniverse_import_mappings.split_update_column_t4.checkbox,"Werte aufsplitten (an `,` und `;`)","Split values (at `,` and `;`)",,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_created_at.label,Zielfeld created_at,Target field created_at,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_created_at.label|hint,Zielfeld für den Wert aus der CSV-Spalte `created_at`,Target field for the value of CSV column `created_at`,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_user_name.label,Zielfeld user_name,Target field user_name,,,,,,,,
-server.config.parameter.system.zooniverse_import.mappings.update_column_user_name.label|hint,Zielfeld für den Wert aus der CSV-Spalte `user_name`,Target field for the value of CSV column `user_name`,,,,,,,,
-acl.right.manager.group.system.zooniverse_import,Zooniverse Import,Zooniverse Import,,,,,,,,
-server.right.system.plugin.easydb-plugin-zooniverse-import.allow_use,Zooniverse Import benutzen,Use Zooniverse Import,,,,,,,,
+%(description)s",FALSE,,FALSE,,FALSE,,FALSE,"L'analyse des données a provoqué une erreur :
+
+%(description)s",FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.import_button.label,Importieren,FALSE,Import,FALSE,,FALSE,,FALSE,,FALSE,Importer,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.group.system.zooniverse_import.introduction,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.group.system.zooniverse_import.title,Zooniverse Import,FALSE,Zooniverse Import,FALSE,,FALSE,Zooniverse tuonti,FALSE,,FALSE,Zooniverse Import,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.name.system.zooniverse_import,API-Nutzer,FALSE,API User,FALSE,,FALSE,API-käyttäjä,FALSE,,FALSE,API Utilisateur,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.name.system.zooniverse_import|hint,"Der Nutzer benötigt ausreichende Berechtigungen, die relevanten Objekttypen zu lesen und zu schreiben",FALSE,The User needs sufficient permissions to read and write the relevant object types,FALSE,,FALSE,Käyttäjä tarvitsee riittävät oikeudet lukea ja kirjoittaa asiaankuuluvia objektityyppejä,FALSE,,FALSE,L'utilisateur a besoin d'autorisations suffisantes pour lire et écrire les types d'objets pertinents,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.api_password.label,Passwort,FALSE,Password,FALSE,,FALSE,Salasana,FALSE,,FALSE,Mot de passe,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.api_session_token.label,Token,FALSE,Token,FALSE,,FALSE,Tunniste,FALSE,,FALSE,Jeton,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.api_session_token.label|hint,"optional, wird ignoriert wenn Login und Passwort gesetzt sind",FALSE,"optional, is ignored if Login and Password are set",FALSE,,FALSE,"valinnainen, ohitetaan, jos käyttäjätunnus ja salasana on asetettu",FALSE,,FALSE,"facultatif, est ignoré si le nom d'utilisateur et le mot de passe sont définis",FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.api_user.label,Login,FALSE,Login,FALSE,,FALSE,Käyttäjätunnus,FALSE,,FALSE,Connexion,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse_import.app.label,Zooniverse Import,FALSE,Zooniverse Import,FALSE,,FALSE,Zooniverse tuonti,FALSE,,FALSE,Zooniverse Import,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.name.system.zooniverse_import_mappings,Zuordnungen zwischen Objekten und Daten aus Zooniverse,FALSE,Mapping between records and Zooniverse data,FALSE,,FALSE,,FALSE,,FALSE,Mappage entre les enregistrements et les données de Zooniverse,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import_mappings.mappings.label,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import_mappings.enabled.checkbox,Zuordnung aktiviert,FALSE,Mapping enabled,FALSE,,FALSE,,FALSE,,FALSE,Mappage activé,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import_mappings.mappings.enabled.label,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_objecttype.label,Objekttyp,FALSE,Objecttype,FALSE,,FALSE,,FALSE,,FALSE,Type d'objet,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_objecttype.label|hint,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import.mappings.match_column.label,Feld für Abgleich,FALSE,Field for match,FALSE,,FALSE,,FALSE,,FALSE,Terrain pour match,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.match_column.label|hint,"Feld mit eindeutigem Wert, der für den Abgleich mit der Zooniverse Signatur (CSV-Spalte `subject_data` - `Filename`) genutzt wird",FALSE,Feld with unique value which will be used for matching with the Zooniverse signature (CSV column `subject_data` - `Filename`),FALSE,,FALSE,,FALSE,,FALSE,Feld avec une valeur unique qui sera utilisée pour la correspondance avec la signature Zooniverse (colonne CSV `subject_data` - `Filename`),FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t0.label,Zielfeld T0,FALSE,Target field T0,FALSE,,FALSE,,FALSE,,FALSE,Champ cible T0,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t0.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T0`,FALSE,Target field for the value of CSV column `annotations` - `task: T0`,FALSE,,FALSE,,FALSE,,FALSE,Champ cible pour la valeur de la colonne CSV `annotations` - `task : T0`,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t0.label,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import_mappings.split_update_column_t0.checkbox,"Werte aufsplitten (an `,` und `;`)",FALSE,"Split values (at `,` and `;`)",FALSE,,FALSE,,FALSE,,FALSE,"Valeurs fractionnées (à `,` et `;`)",FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t2.label,Zielfeld T2,FALSE,Target field T2,FALSE,,FALSE,,FALSE,,FALSE,Champ cible T2,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t2.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T2`,FALSE,Target field for the value of CSV column `annotations` - `task: T2`,FALSE,,FALSE,,FALSE,,FALSE,Champ cible pour la valeur de la colonne CSV `annotations` - `task : T2`,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t2.label,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import_mappings.split_update_column_t2.checkbox,"Werte aufsplitten (an `,` und `;`)",FALSE,"Split values (at `,` and `;`)",FALSE,,FALSE,,FALSE,,FALSE,"Valeurs fractionnées (à `,` et `;`)",FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t3.label,Zielfeld T3,FALSE,Target field T3,FALSE,,FALSE,,FALSE,,FALSE,Champ cible T3,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t3.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T3`,FALSE,Target field for the value of CSV column `annotations` - `task: T3`,FALSE,,FALSE,,FALSE,,FALSE,Champ cible pour la valeur de la colonne CSV `annotations` - `task : T3`,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t3.label,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import_mappings.split_update_column_t3.checkbox,"Werte aufsplitten (an `,` und `;`)",FALSE,"Split values (at `,` and `;`)",FALSE,,FALSE,,FALSE,,FALSE,"Valeurs fractionnées (à `,` et `;`)",FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t4.label,Zielfeld T4,FALSE,Target field T4,FALSE,,FALSE,,FALSE,,FALSE,Champ cible T4,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_t4.label|hint,Zielfeld für den Wert aus der CSV-Spalte `annotations` - `task: T4`,FALSE,Target field for the value of CSV column `annotations` - `task: T4`,FALSE,,FALSE,,FALSE,,FALSE,Champ cible pour la valeur de la colonne CSV `annotations` - `task : T4`,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import_mappings.mappings.split_update_column_t4.label,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE,-,FALSE
+server.config.parameter.system.zooniverse_import_mappings.split_update_column_t4.checkbox,"Werte aufsplitten (an `,` und `;`)",FALSE,"Split values (at `,` and `;`)",FALSE,,FALSE,,FALSE,,FALSE,"Valeurs fractionnées (à `,` et `;`)",FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_created_at.label,Zielfeld created_at,FALSE,Target field created_at,FALSE,,FALSE,,FALSE,,FALSE,Champ cible created_at,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_created_at.label|hint,Zielfeld für den Wert aus der CSV-Spalte `created_at`,FALSE,Target field for the value of CSV column `created_at`,FALSE,,FALSE,,FALSE,,FALSE,Champ cible pour la valeur de la colonne CSV `created_at`,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_user_name.label,Zielfeld user_name,FALSE,Target field user_name,FALSE,,FALSE,,FALSE,,FALSE,Champ cible nom_utilisateur,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.config.parameter.system.zooniverse_import.mappings.update_column_user_name.label|hint,Zielfeld für den Wert aus der CSV-Spalte `user_name`,FALSE,Target field for the value of CSV column `user_name`,FALSE,,FALSE,,FALSE,,FALSE,Champ cible pour la valeur de la colonne CSV `user_name`,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+acl.right.manager.group.system.zooniverse_import,Zooniverse Import,FALSE,Zooniverse Import,FALSE,,FALSE,,FALSE,,FALSE,Importation de zoounivers,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+server.right.system.plugin.easydb-plugin-zooniverse-import.allow_use,Zooniverse Import benutzen,FALSE,Use Zooniverse Import,FALSE,,FALSE,,FALSE,,FALSE,Utiliser l'importation de Zoouniverse,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.log.header,**Import Overview**,TRUE,**Import Overview**,TRUE,**Import Overview**,TRUE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.log.parsed_rows,Parsed Rows,TRUE,Parsed Rows,TRUE,Parsed Rows,TRUE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.log.parsed_objects,Parsed Objects,TRUE,Parsed Objects,TRUE,Parsed Objects,TRUE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.log.updated_objects,Updated Objects,TRUE,Updated Objects,TRUE,Updated Objects,TRUE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
+zooniverse.importer.log.new_objects,New Objects,TRUE,New Objects,TRUE,New Objects,TRUE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE,,FALSE
